--- a/app/views/scorecards/merge_options.html.erb
+++ b/app/views/scorecards/merge_options.html.erb
@@ -21,6 +21,21 @@
         %>
       </div>
 
+      <div>
+        <%= radio_button_tag(:merge, "shallow", true) %>
+        <%= label_tag(:merge_shallow, "Shallow merge" ) %>
+        <p>
+          Merge cards but keep any initiatives with the same name separate (rename any clashing initiatives).
+        </p>
+      </div>
+      <div>
+        <%= radio_button_tag(:merge, "deep") %>
+        <%= label_tag(:merge_deep, "Deep merge") %>
+        <p>
+          Merge cards and merge any initiatives with the same name (combine any clashing initiatives).
+        </p>
+      </div>
+
     </div class="form-group select required">
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
