gen-2 sketched filter for grid, not working

--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@account, role: 'form', html: { class: 'form-horizontal record-form space-y-6' }) do |f| %>
-  <%= form_header(@account) %>
+  <%#= form_header(@account) %>
 
   <div class="flex items-center">
     <%= f.label :name, class: 'w-1/3 text-right pr-4' %>
