gen-2 added first draft of the multi-select

--- a/app/views/impact_cards/index.html.erb
+++ b/app/views/impact_cards/index.html.erb
@@ -13,7 +13,7 @@
     </div>
     <ul class="w-full divide-y divide-gray-200 dark:divide-gray-700">
       <%= turbo_frame_tag :list do %>
-        <%= render @impact_cards %>
+        <%= render partial: 'impact_card', collection: @impact_cards, as: :impact_card %>
         <%= render partial: 'pagination' %>
       <% end %>
     </ul>
