--- a/app/views/impact_cards/show_tabs/_grid.html.erb
+++ b/app/views/impact_cards/show_tabs/_grid.html.erb
@@ -1,18 +1,21 @@
 <div class="text-left">
   <div class="flex justify-between items-center mb-4">
+
     <%= form_with url: impact_card_path(@scorecard), method: :get do |form| %>
     <div class="flex space-x-4">
       <div>
+
+
         <%= form.label :date, class: "block text-sm font-medium text-gray-700 dark:text-gray-300 sr-only" %>
         <%= custom_date_field_tag :date, @date, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm", data: { action: "change->form#submit" } %>
       </div>
       <div>
         <%= form.label :subsystem_tags, class: "block text-sm font-medium text-gray-700 dark:text-gray-300 sr-only" %>
-        <%#= render 'multi_select', form: form, label: "Subsystem Tags", options: @subsystem_tags.pluck(:name) %>
+        <%= form.multi_select :test, @subsystem_tags.pluck(:name), placeholder: 'Select subsytem tags...' %>
       </div>
       <div>
         <%= form.label :stakeholders, class: "block text-sm font-medium text-gray-700 dark:text-gray-300 sr-only" %>
-        <%= custom_select_tag :stakeholders, options_for_select(["All stakeholders"] + @stakeholders.pluck(:name), [@stakeholders.second.name, @stakeholders.third.name]) %>
+        <%= form.multi_select :stakeholders, @stakeholders.pluck(:name), placeholder: 'Select stakeholders...' %>
       </div>
     </div>
     <% end %>
