--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,7 @@
           <p class="mt-6 text-lg leading-8 text-gray-300">Tackle society's toughest challenges with Obsekio, the Tool for Systemic Change. Create lasting solutions through holistic thinking and collaboration.</p>
           <div class="mt-10 flex items-center gap-x-6">
             <%#= link_to 'Get started', new_user_registration_path, class: "rounded-md bg-yellow-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-yellow-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-yellow-400" %>
-            <%= link_to new_user_session_path, class: 'text-sm font-semibold leading-6 text-white' do %>
+            <%= link_to new_user_session_path, class: 'text-sm font-semibold leading-6 text-white', turbo: false do %>
               Already have an account? Sign in <span aria-hidden="true">→</span>
             <% end %>
           </div>
