--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_importmap_tags %>
     <%= render partial: '/layouts/shared/favicons' %>
   </head>
-  <body>
+  <body data-controller="theme">
     <%= render 'layouts/shared/flash_messages' %>
     <div class="relative isolate flex min-h-svh w-full bg-white max-lg:flex-col lg:bg-zinc-100 dark:bg-zinc-900 dark:lg:bg-zinc-950">
       <%#= render partial: 'layouts/shared/sidebar_mobile' %>
