--- a/app/views/impact_cards/show.html.erb
+++ b/app/views/impact_cards/show.html.erb
@@ -1,42 +1,7 @@
 <div class="mx-auto max-w-6xl">
-  <%= link_to 'Graph', impact_card_stakeholder_network_index_path(@scorecard), class: 'text-green-500' %>
-  <%= link_to 'Thematic Map', impact_card_thematic_map_index_path(@scorecard), class: 'text-green-500' %>
-
-  <div class="flex items-center mt-4 mb-4">
-    <%= render partial: 'resource_summary', locals: { name: @scorecard.name, background_color: 'bg-cyan-600' } %>
-    <div class="flex-1">
-      <div>
-        <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
-          <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white"><%= @scorecard.name %></h1>
-        </div>
-        <div class="mt-2 text-sm/6 text-zinc-500"><%= @scorecard.description %></div>
-      </div>
-    </div>
-  </div>
-
-
-  <div role="menubar" class="flex h-10 items-center space-x-1 rounded-md border bg-background p-1" tabindex="0" data-orientation="horizontal" style="outline: none;">
-  <button type="button" role="menuitem" aria-haspopup="menu" aria-expanded="false" data-state="closed" class="flex cursor-default select-none items-center rounded-sm px-3 py-1.5 text-sm font-medium outline-none focus:bg-accent focus:text-accent-foreground text-accent-foreground" tabindex="-1">Grid
-  </button>
-  <button type="button" role="menuitem" aria-haspopup="menu" aria-expanded="false" data-state="closed" class="flex cursor-default select-none items-center rounded-sm px-3 py-1.5 text-sm font-medium outline-none focus:bg-accent focus:text-accent-foreground" tabindex="-1" data-orientation="horizontal">Insights
-  </button>
-  <button type="button" role="menuitem" aria-haspopup="menu" aria-expanded="false" data-state="closed" class="flex cursor-default select-none items-center rounded-sm px-3 py-1.5 text-sm font-medium outline-none focus:bg-accent focus:text-accent-foreground" tabindex="0" data-orientation="horizontal">Details
-  </button>
-  <button type="button" role="menuitem" aria-haspopup="menu" aria-expanded="false" data-state="closed" class="flex cursor-default select-none items-center rounded-sm px-3 py-1.5 text-sm font-medium outline-none focus:bg-accent focus:text-accent-foreground" tabindex="-1" data-orientation="horizontal">Activity
-  </button>
-  </div>
-
-
-  <div class"y-2">
-  <span class="isolate inline-flex rounded-md shadow-sm">
-    <button type="button" class="relative inline-flex items-center rounded-l-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-10">Years</button>
-    <button type="button" class="relative -ml-px inline-flex items-center bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-10">Months</button>
-    <button type="button" class="relative -ml-px inline-flex items-center rounded-r-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-10">Days</button>
-  </span>
-  </div>
-
+  <%= render 'impact_cards/summary', impact_card: @scorecard %>
+  <%= render 'impact_cards/tabs', impact_card: @scorecard %>
   <div>
     <%= render 'impact_cards/grid' %>
   </div>
-
 </div>
