--- a/app/views/impact_cards/stakeholder_network/index.html.erb
+++ b/app/views/impact_cards/stakeholder_network/index.html.erb
@@ -1,28 +1,6 @@
 <div class="mx-auto max-w-6xl" data-controller="stakeholder-network">
-
-
-  <div class="flex items-center mt-4 mb-4">
-    <%= render partial: 'resource_summary', locals: { name: @scorecard.name, background_color: 'bg-cyan-600' } %>
-    <div class="flex-1">
-      <div>
-        <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
-          <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white"><%= @scorecard.name %></h1>
-        </div>
-        <div class="mt-2 text-sm/6 text-zinc-500"><%= @scorecard.description %></div>
-      </div>
-    </div>
-  </div>
-
-  <div role="menubar" class="flex h-10 items-center space-x-1 rounded-md border bg-background p-1" tabindex="0" data-orientation="horizontal" style="outline: none;">
-  <button type="button" role="menuitem" aria-haspopup="menu" aria-expanded="false" data-state="closed" class="flex cursor-default select-none items-center rounded-sm px-3 py-1.5 text-sm font-medium outline-none focus:bg-accent focus:text-accent-foreground text-accent-foreground" tabindex="-1">Grid
-  </button>
-  <button type="button" role="menuitem" aria-haspopup="menu" aria-expanded="false" data-state="closed" class="flex cursor-default select-none items-center rounded-sm px-3 py-1.5 text-sm font-medium outline-none focus:bg-accent focus:text-accent-foreground" tabindex="-1" data-orientation="horizontal">Insights
-  </button>
-  <button type="button" role="menuitem" aria-haspopup="menu" aria-expanded="false" data-state="closed" class="flex cursor-default select-none items-center rounded-sm px-3 py-1.5 text-sm font-medium outline-none focus:bg-accent focus:text-accent-foreground" tabindex="0" data-orientation="horizontal">Details
-  </button>
-  <button type="button" role="menuitem" aria-haspopup="menu" aria-expanded="false" data-state="closed" class="flex cursor-default select-none items-center rounded-sm px-3 py-1.5 text-sm font-medium outline-none focus:bg-accent focus:text-accent-foreground" tabindex="-1" data-orientation="horizontal">Activity
-  </button>
-  </div>
+  <%= render 'impact_cards/summary', impact_card: @scorecard %>
+  <%= render 'impact_cards/tabs', impact_card: @scorecard %>
 
   <div class="flex justify-between items-center mb-4">
 
