--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,6 +1,6 @@
 @import "shadcn.css";
 @import "pagy.tailwind.css";
-@import "split.css";
+/* @import "split.css"; */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
