--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto max-w-6xl">
-  <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 text-black dark:text-white">Hello, <%= current_user.name %></h1>
+  <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 text-black dark:text-white">Hello, <%= current_user.name %>. Welcome to the '<%= current_account.name %>' workspace.</h1>
 
   <div class="mt-8 flex items-end justify-between">
     <h2 class="text-base/7 font-semibold text-zinc-950 sm:text-sm/6 text-black dark:text-white">Overview</h2>
