--- a/app/views/impact_cards/new.html.erb
+++ b/app/views/impact_cards/new.html.erb
@@ -13,24 +13,16 @@
           <div class="sm:col-span-4">
             <%= form.label :name, 'Title' %>
             <div class="mt-2">
-              <%=
-                form.text_field(
-                  :name,
-                  placeholder: 'Impact card title',
-                  autofocus: true,
-                  class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6",
-                  required: true
-                )
-              %>
+              <%= form.text_field(:name, placeholder: 'Impact card title', autofocus: true, required: true) %>
             </div>
           </div>
 
           <div class="col-span-full">
             <%= form.label :description %>
             <div class="mt-2">
-              <%= form.text_area :description, rows: 3, placeholder: '', class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6" %>
+              <%= form.text_area :description, rows: 3, placeholder: '' %>
             </div>
-            <p class="mt-3 text-sm/6 text-gray-600">Write a brief description of your new card (optional).</p>
+            <p class="text-sm/6 text-gray-600">Write a brief description of your new card (optional).</p>
           </div>
         </div>
       </div>
@@ -62,14 +54,14 @@
             <div class="sm:col-span-4">
               <%= initiatives_form.label :name %>
               <div class="mt-2">
-                <%= initiatives_form.text_field :name, placeholder: 'Initiative name', class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6" %>
+                <%= initiatives_form.text_field :name, placeholder: 'Initiative name' %>
               </div>
             </div>
 
             <div class="col-span-full">
               <%= initiatives_form.label :description %>
               <div class="mt-2">
-                <%= initiatives_form.text_area :description, rows: 3, placeholder: 'Initiative description', class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6" %>
+                <%= initiatives_form.text_area :description, rows: 3, placeholder: 'Initiative description' %>
               </div>
             </div>
           </div>
