--- a/app/views/initiatives/_form.html.erb
+++ b/app/views/initiatives/_form.html.erb
@@ -12,7 +12,7 @@
         <div class="sm:col-span-4">
           <%= form.label :name %>
           <div class="mt-2">
-            <%= form.text_field :name, placeholder: 'Initiative name', class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6" %>
+            <%= form.text_field :name, placeholder: 'Initiative name', xclass: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6" %>
           </div>
         </div>
 
