--- a/app/views/organisations/_form.html.erb
+++ b/app/views/organisations/_form.html.erb
@@ -7,25 +7,16 @@
         <%= render 'section_body' do %>
           <div class="sm:col-span-4">
             <%= form.label :name %>
-            <div class="mt-2">
-              <%=
-                form.text_field(
-                  :name,
-                  placeholder: 'Stakeholder name',
-                  autofocus: true,
-                  class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6",
-                  required: true
-                )
-              %>
-            </div>
+            <div class="mt-2"><%= form.text_field(:name, placeholder: 'Stakeholder name', autofocus: true, required: true) %>
+</div>
           </div>
 
           <div class="col-span-full">
             <%= form.label :description %>
             <div class="mt-2">
-              <%= form.text_area :description, rows: 3, placeholder: '', class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6" %>
+              <%= form.text_area :description, rows: 3, placeholder: '' %>
             </div>
-            <p class="mt-3 text-sm/6 text-gray-600">A brief description of the stakeholder (optional).</p>
+            <p class="text-sm/6 text-gray-600">A brief description of the stakeholder (optional).</p>
           </div>
         <% end %>
       <% end %>
@@ -48,14 +39,7 @@
           <div class="sm:col-span-4">
             <%= form.label :weblink %>
             <div class="mt-2">
-              <%=
-                form.text_field(
-                  :weblink,
-                  placeholder: 'Website URL',
-                  autofocus: true,
-                  class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6"
-                )
-              %>
+              <%= form.text_field(:weblink, placeholder: 'Website URL', autofocus: true) %>
             </div>
           </div>
         <% end %>
