--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,13 +9,7 @@
             <%= form.label :name %>
             <div class="mt-2">
               <%=
-                form.text_field(
-                  :name,
-                  placeholder: 'User name',
-                  autofocus: true,
-                  class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6",
-                  required: true
-                )
+                form.text_field(:name, placeholder: 'User name', autofocus: true, required: true)
               %>
             </div>
           </div>
