--- a/app/views/impact_cards/stakeholder_network/index.html.erb
+++ b/app/views/impact_cards/stakeholder_network/index.html.erb
@@ -7,6 +7,7 @@
 
     <%= form_with url: impact_card_stakeholder_network_index_path(@scorecard), method: :get, data: { grid_target: 'filterForm' } do |form| %>
       <div class="flex space-x-4">
+        <div class="pt-2 flex justify-center items-center"><span class="text-sm font-medium text-gray-900 dark:text-white">Filter by:</span></div>
         <div>
           <%= form.label :stakeholder_types, class: "block text-sm font-medium text-gray-700 dark:text-gray-300 sr-only" %>
           <%=
